2015-07-21  Paolo Carlini  <paolo.carlini@oracle.com>

	* decl.c (grokdeclarator): For an erroneous template parameter
	propagate error_mark_node as type.

2015-07-20  Marek Polacek  <polacek@redhat.com>

	PR c++/55095
	* typeck.c (cp_build_binary_op): Warn about left shift overflows.

2015-07-15  Jason Merrill  <jason@redhat.com>

	PR c++/65091
	* parser.c (cp_parser_unqualified_id): Don't accept ~x in a
	template if there is no type x in scope.

2015-07-14  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/66850
	* pt.c (redeclare_class_template): Set the DECL_CONTEXTs of each
	template template parm in the redeclaration.
	(lookup_template_class_1): Peel off irrelevant template levels
	from current_template_parms before augmenting the argument
	list.

2015-07-14  Andrea Azzarone  <azzaronea@gmail.com>

	PR c++/65071
	* parser.c (cp_parser_sizeof_pack): Also consider template template
	parameters.

2015-07-14  Jason Merrill  <jason@redhat.com>

	* call.c (build_new_method_call_1): Call reshape_init.

2015-07-14  Paolo Carlini  <paolo.carlini@oracle.com>

	* pt.c (check_template_shadow): Emit error + inform instead of
	two errors.

2015-07-13  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/65186
	* pt.c (invalid_nontype_parm_type_p): Accept a bound template
	template parm type under C++11 and later.

2015-07-12  Aldy Hernandez  <aldyh@redhat.com>

	* call.c: Fix double word typos.
	* cp-array-notation.c: Same.
	* cp-tree.h: Same.
	* init.c: Same.
	* name-lookup.c: Same.
	* parser.c: Same.

2015-07-10  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/30044
	* pt.c (begin_template_parm_list): Add a dummy parameter level
	to current_template_parms.
	(end_template_parm_list): Remove the dummy parameter level
	before adding the real one.
	(tsubst): Don't attempt to substitute for template parameters
	corresponding to a dummy argument level.
	(template_parms_to_args): Remove obsolete hack for
	giving template template arguments the proper level.