@@ -1,3 +1,9 @@
+2015-07-23  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/52987
+	* g++.dg/parse/error57.C: New.
+	* g++.dg/expr/string-2.C: Update.
+
 2015-07-23  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/66945
