@@ -1,3 +1,9 @@
+2015-07-23  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/52987
+	* parser.c (cp_parser_simple_declaration): Robustify check avoiding
+	redundant error messages.
+
 2015-07-21  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* decl.c (grokdeclarator): For an erroneous template parameter
